--- a/report/MainWindow.xaml
+++ b/report/MainWindow.xaml
@@ -5,15 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:report"
         mc:Ignorable="d"
-        Title="Report" Height="800" Width="900" ScrollViewer.CanContentScroll="True">
+        Title="Report" Height="800" Width="800" ScrollViewer.CanContentScroll="True" Closed="Window_Closed" ResizeMode="CanMinimize">
     <Grid Name ="GridName">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"></ColumnDefinition>
             <ColumnDefinition Width="300"></ColumnDefinition>
             <ColumnDefinition Width="100"></ColumnDefinition>
             <ColumnDefinition Width="100"></ColumnDefinition>
-            <ColumnDefinition Width="200"></ColumnDefinition>
-            <ColumnDefinition Width="100"></ColumnDefinition>
+            <ColumnDefinition Width="185"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="112"></RowDefinition>
