--- a/report/Questions.xaml
+++ b/report/Questions.xaml
@@ -5,20 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:report"
         mc:Ignorable="d"
-        Title="Questions" Height="600" Width="800" Loaded="Window_Loaded">
+        Title="Questions" Height="680" Width="800" Loaded="Window_Loaded" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"></RowDefinition>
+            <RowDefinition Height="61"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="460"></RowDefinition>
             <RowDefinition Height="70"></RowDefinition>
-            <RowDefinition Height="300"></RowDefinition>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Name="LabelFio" Content="ФИО" FontSize="40" VerticalContentAlignment="Center" Margin="40,0,40,0"></Label>
         <StackPanel Grid.Row="1" Name="StackPanelHead"></StackPanel>
-        <ScrollViewer Grid.Row="2" Height="340" >
+        <ScrollViewer Grid.Row="2" Margin="0,0,0,30" >
             <StackPanel Name="StackPanelQestions" ></StackPanel>
         </ScrollViewer>
+        <Label Name="LabelTrueAnswers" Grid.Row="3" FontSize="16" FontWeight="Bold" Margin="20">Правельных ответов 0 из 0</Label>
     </Grid>
 </Window>
