Добавил вторую кнопку выгрузки в Excel

--- a/report/MainWindow.xaml
+++ b/report/MainWindow.xaml
@@ -21,12 +21,13 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Content="Отчет по тестированию" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="67" Margin="24,23,0,0" VerticalAlignment="Top" Width="453" FontSize="40"/>
-        <Button Content="Обновить" Grid.Row="0" Grid.Column="4" HorizontalAlignment="Left" Height="41" Margin="56,10,0,0" VerticalAlignment="Top" Width="120" FontSize="20" Click="Button_Click" />
+        <Button Content="Обновить" Grid.Row="0" Grid.Column="4" HorizontalAlignment="Left" Margin="82,10,0,61" Width="100" FontSize="20" Click="Button_Click" />
         <StackPanel Grid.ColumnSpan="5" Grid.Column="0" Grid.Row="1" Name="StackPanelHead"  Orientation="Vertical"/>
         <ScrollViewer Name="ScrollViewerTable" Grid.ColumnSpan="5" Grid.Column="0" Grid.Row="2">
             <StackPanel Name="StackPanelTable"  Orientation="Vertical"/>
         </ScrollViewer>
         <Label Name ="LabelTotal" Content="Прошли тест" Grid.Column="1" HorizontalAlignment="Left" Margin="10,30,0,0" Grid.Row="3" VerticalAlignment="Top" FontSize="18" FontWeight="Bold"/>
-        <Button Name="ButtonExcel" Content="В Excel" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Left" Margin="23,10,0,0" VerticalAlignment="Top" Width="120" FontSize="20" Click="ButtonExcel_Click" Height="41" Grid.ColumnSpan="2"/>
+        <Button Name="ButtonExcel2" Content="Excel 2" Grid.Column="4" Grid.Row="0" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="70" FontSize="20" Click="ButtonExcel_Click" Height="41"/>
+        <Button Name="ButtonExcel1" Content="Excel 1" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Left" Margin="21,10,0,0" VerticalAlignment="Top" Width="70" FontSize="20" Height="41" Click="ButtonExcel1_Click"/>
     </Grid>
 </Window>
